# healthz-aggregator

./: .gitignore  Cargo.toml  LICENSE  README.cz.docx  README.cz.md  README.md  TODO.md
src/: config.rs  main.rs  scheduler.rs  state.rs
src/checks/: file.rs  http.rs  http_json.rs  json_path.rs  mod.rs  oracle.rs  postgres.rs  tcp.rs  tls_cert.rs  tls_client.rs
src/http/: healthz.rs  metrics.rs  mod.rs  static_assets.rs  ui.rs
static/: ui.css  ui.js
templates/: ui.html  ui_checks.html  ui_header.html
