[package]
name = "healthz-aggregator"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8"
tokio = { version = "1.38", features = ["rt-multi-thread", "macros", "time"] }

serde = { version = "1.0", features = ["derive"] }
serde_yaml_ng = "0.10"

humantime = "2.3"
humantime-serde = "1.1"

anyhow = "1.0"

reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde_json = "1.0"
regex = "1.11"
askama = "0.14"
tower-http = { version = "0.6", features = ["fs"] }
url = "2.5"

# Postgres + TLS-certificate checks
tokio-postgres = "0.7"
tokio-postgres-rustls = "0.13"
tokio-rustls = "0.26"
rustls = { version = "0.23", features = ["ring"] }
rustls-native-certs = "0.8"
#x509-parser = { version = "0.16", features = ["time"] }

prometheus = "0.14"
once_cell = "1.19"
futures = "0.3"

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
time = { version = "0.3.44", features = ["formatting", "serde"] }
x509-parser = "0.18.0"
