[package]
name = "healthz-aggregator"
version = "0.4.0"
edition = "2024"

[dependencies]
axum = "0.8"
tokio = { version = "1.50", features = ["rt-multi-thread", "macros", "time", "fs"] }

serde = { version = "1.0", features = ["derive"] }
serde_yaml_ng = "0.10"

humantime = "2.3"
humantime-serde = "1.1"

anyhow = "1.0"

reqwest = { version = "0.13", features = ["json"] }
serde_json = "1.0"
regex = "1.12"
askama = "0.15"
tower-http = { version = "0.6", features = ["fs"] }
url = "2.5"
webbrowser = "1.2"
clap = { version = "4.6", features = ["derive", "env"] }

# Oracle check (feature-gated; requires Oracle client libraries at runtime).
oracle = { version = "0.6", optional = true }

# Postgres + TLS-certificate checks
tokio-postgres = "0.7"
tokio-postgres-rustls = "0.13"
tokio-rustls = "0.26"
rustls = { version = "0.23", features = ["ring"] }
rustls-native-certs = "0.8"
#x509-parser = { version = "0.16", features = ["time"] }

prometheus = "0.14"
once_cell = "1.21"
futures = "0.3"

tracing = "0.1.44"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
time = { version = "0.3.47", features = ["formatting", "serde"] }
x509-parser = "0.18.1"

[features]
default = []
oracle = ["dep:oracle"]
